# dbt-logbook

./: .gitignore  NOTICE  README.md  TODOS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api-contract.md  compatibility.md  recon-v2-artifacts.md
src/dbt_logbook/: api.py  ci_report.py  cli.py  demo.py  exec_wrapper.py  ingest.py  mcp_server.py  paths.py  queries.py  serve.py  store.py
src/dbt_logbook/web/: index.html
src/dbt_logbook/web/static/: app.js
tests/: conftest.py  test_api.py  test_cost_and_ci.py  test_demo.py  test_exec.py  test_freshness.py  test_ingest.py  test_mcp.py  test_queries.py  test_serve.py  test_state.py  test_store.py
tests/fixtures/dbt-1.10/: manifest.json  run_results.json
tests/fixtures/dbt-1.11/: manifest.json  run_results.json
tests/fixtures/dbt-1.7/: manifest.json  run_results.json
tests/fixtures/dbt-1.8/: manifest.json  run_results.json
tests/fixtures/dbt-2.0/: manifest.json  run_results.json
