[project]
name = "dbt-logbook"
version = "0.1.0.dev0"
description = "Run history for dbt. Every invocation recorded, nothing overwritten."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "Debabrata Saha" }]
keywords = ["dbt", "run history", "observability", "data engineering"]
dependencies = [
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
]

[project.scripts]
dbt-logbook = "dbt_logbook.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbt_logbook"]

[dependency-groups]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
